# neumann

./: .gitignore  AGENTS.md  MORNING_REVIEW.md  README.md  SPEC.md  pyproject.toml
docs/: flows.html  flows.json
docs/specs/: pipeline-ordering.md  qa-agent.md  qa-failure-dashboard.md
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json  manifest.json
neumann/: __init__.py  __main__.py  advanced_prompts.py  agent.py  classifier.py  cli.py  config.py  context.py  git_tools.py  logger.py  memory.py  pipeline.py  registry.py  selector.py  self_improvement.py  streaming.py  streaming_async.py  templates.py  tui.py  types.py  validator.py
neumann/formatters/: __init__.py  agent_state.py  code.py  diff.py  error.py  fallback.py  markdown.py  tool_call.py
neumann/llm/: __init__.py  adapter.py  anthropic_adapter.py  gemini_adapter.py  mlx_adapter.py  ollama_adapter.py  openai_adapter.py  router.py
neumann/router/: README.md  __init__.py  _telemetry.py  claude_planner.py  cli.py  context_resolver.py  decomposer.py  fallback.py  fusion_watcher.py  interviewer.py  persona_selector.py  pipeline.py  planner_protocol.py  qa_executor.py  qa_retry.py  qa_state.py  qa_test.py  registry.py  shape_classifier.py  task_classifier.py  task_decomposer.py  tiebreaks.py  types.py  validator.py
neumann/tools/: __init__.py  bash.py  edit_file.py  git.py  grep.py  read_file.py  registry.py  write_file.py
rules/: dispatch.json  token_rules.json
tests/: test_advanced_prompts.py  test_agent.py  test_classifier.py  test_formatters.py  test_git.py  test_llm.py  test_memory.py  test_new_features.py  test_pipeline.py  test_scanner.py  test_selector.py  test_self_improvement.py  test_streaming.py  test_streaming_async.py  test_templates.py  test_tools.py  test_validator.py
tests/router/: test_chat_interviewers.py  test_decomposer.py  (+13 more)
(+10 files in other folders)
