[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neumann"
version = "0.1.0"
description = "Deterministic symbolic routing kernel for AI agent systems"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

[tool.setuptools.packages.find]
include = ["neumann*"]

[project.scripts]
neumann = "neumann.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov", "anyio>=3"]

[tool.pytest.ini_options]
testpaths = ["tests"]
